plugins {
    id("java")
    id("application")
    kotlin("jvm") version "2.1.10"
}

group = "dev.cgj"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

dependencies {
    testImplementation(kotlin("test"))
}

tasks.test {
    useJUnitPlatform()
}

kotlin {
    jvmToolchain(21)
}